// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar should render 1`] = `
<div>
  <div
    class="sticker sticker-root sticker-static avatar-root sticker-rounded sticker-chartRed"
  >
    FB
  </div>
</div>
`;

exports[`Avatar should render with an image 1`] = `
<div>
  <div
    class="sticker sticker-root sticker-static avatar-root sticker-rounded sticker-chartRed"
    style="background-image: url(http://i.imgur.com/G5pfP.jpg);"
  />
</div>
`;
